[package]
name = "texturelib"
version = "0.1.0"
authors = ["Alex Linkov <alexey.linkov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
texture-synthesis = "0.8.0"
log = "0.4.6"
log-panics = "2.0"
libc = "0.2"
core-foundation = "0.6.2"
stdweb = "0.4.1"
futures = "0.3.1"
async-std = { version = "1.2", features = ["attributes"] }

[lib]
name = "texturelib"
crate-type = ["staticlib", "cdylib"]